-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14.1
-
qt 5.14.1 emscripten 1.38.47
qt 5.14.1 built with thread support
-
-
c034089fa697e6dc22f04b3209768a9dc1abcb9c (qt/qtbase/5.14)
A simple example with QThread signaling a widget to update text does not work.
The code is attached.
The message on the web browser is:
Application exit (TypeError: Browser.mainLoop.scheduler is not a function)
For Gerrit Dashboard: QTBUG-83293 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
297041,4 | wasm: do not try to resume main thread if mainloop has not started yet | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |