wasm: do not try to resume main thread if mainloop has not started yet

(cherry picked from commit d928beb024c240b37d35d2c53f25648c99a484b4)
Fixes: QTBUG-83293
Change-Id: Ibd891629d1d023e47d196dd60821cc5c583a178d
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>